force-app/main/default/objects/Beneficiary__c/fields/External_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Id__c</fullName>
    <formula>Other_Names__c + &apos;|&apos; +  Phone__c + &apos;|&apos; +  UPI_Id__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Id</label>
    <type>Text</type>
</CustomField>