force-app/main/default/objects/Beneficiary__c/fields/Other_Names__c.field-meta.xml
<CustomField>
    <fullName>Other_Names__c</fullName>
    <inlineHelpText>Comma separated value of available beneficiary names</inlineHelpText>
    <label>Other Names</label>
    <length>255</length>
    <type>Text</type>
</CustomField>