force-app/main/default/objects/Beneficiary__c/fields/UPI_Id__c.field-meta.xml
<CustomField>
    <fullName>UPI_Id__c</fullName>
    <label>UPI Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>